--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=boot-learn-app
+
 spring.cloud.config.uri=http://127.0.0.1:${config.port:8888}
 spring.cloud.config.name=cloud-config
 spring.cloud.config.profile=${config.profile:dev}
